--- a/gb/17/3/23/n8956302.md
+++ b/gb/17/3/23/n8956302.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fhwnic3872/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fhwnic3872/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fhwnic3872/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵飞抵墨尔本 大洋洲32场巡演拉开帷幕</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/03/1703222210291973-600x400.jpg" />
 <h6>美国神韵纽约艺术团于3月23日早上抵达墨尔本，将展开大洋洲32场巡回演出，在墨尔本机场受到了期盼已久的粉丝们的热情欢迎。（池善华／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2017年03月23日讯】（大纪元澳洲<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>记者站报导）2017年3月23日，刚刚在台湾创下35场大爆满票房奇迹的美国<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>纽约艺术团，飞抵<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A.md#1">澳大利亚</a><ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>国际机场，正式展开在大洋洲7大城市的32场巡回演出。热情的神韵粉丝们一大早就守在接机大厅，拉起“欢迎神韵艺术团莅临澳大利亚巡演”的条幅，手捧鲜花和标牌，迎接神韵<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF%E5%AE%B6.md#1">艺术家</a>们的到来。</p>
-<figure id="attachment_8956521" aria-describedby="caption-attachment-8956521" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/03/1703222204401973.jpg"><img class="wp-image-8956521 size-medium" src="https://i.epochtimes.com/assets/uploads/2017/03/1703222204401973-450x300.jpg" width="450" b="300" /></a><figcaption id="caption-attachment-8956521" class="wp-caption-text">美国<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>纽约艺术团于3月23日早上抵达墨尔本，将展开大洋洲32场巡回演出，在墨尔本机场受到了期盼已久的粉丝们的热情欢迎。（周瑞秋／大纪元）</figcaption></figure>
+	<p>【大纪元2017年03月23日讯】（大纪元澳洲<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>记者站报导）2017年3月23日，刚刚在台湾创下35场大爆满票房奇迹的美国<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>纽约艺术团，飞抵<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A.md#1">澳大利亚</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>国际机场，正式展开在大洋洲7大城市的32场巡回演出。热情的神韵粉丝们一大早就守在接机大厅，拉起“欢迎神韵艺术团莅临澳大利亚巡演”的条幅，手捧鲜花和标牌，迎接神韵<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF%E5%AE%B6.md#1">艺术家</a>们的到来。</p>
+<figure id="attachment_8956521" aria-describedby="caption-attachment-8956521" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/03/1703222204401973.jpg"><img class="wp-image-8956521 size-medium" src="https://i.epochtimes.com/assets/uploads/2017/03/1703222204401973-450x300.jpg" width="450" b="300" /></a><figcaption id="caption-attachment-8956521" class="wp-caption-text">美国<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>纽约艺术团于3月23日早上抵达墨尔本，将展开大洋洲32场巡回演出，在墨尔本机场受到了期盼已久的粉丝们的热情欢迎。（周瑞秋／大纪元）</figcaption></figure>
 <p>2017年是总部设于纽约的神韵艺术团自2006年成立以来的第11次世界巡演，五个同等规模的艺术团将在130多个城市进行400余场演出，历时近5个月。本年度大洋洲巡演的首站演出即将在连续6年蝉联世界宜居城市冠军的墨尔本拉开序幕。</p>
-<p>当天早上7点45分，神韵艺术团飞抵墨尔本国际机场。当气质非凡的神韵<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF%E5%AE%B6.md#1">艺术家</a>们一踏进接机大厅，大厅内立即响起了热烈的掌声和热情的欢呼声。神韵艺术家们神采奕奕，丝毫不见旅途劳顿，愉快地接受着粉丝们的鲜花和祝福。粉丝们喊着“神韵、神韵、我爱你，”现场气氛非常热烈。</p>
+<p>当天早上7点45分，神韵艺术团飞抵墨尔本国际机场。当气质非凡的神韵<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF%E5%AE%B6.md#1">艺术家</a>们一踏进接机大厅，大厅内立即响起了热烈的掌声和热情的欢呼声。神韵艺术家们神采奕奕，丝毫不见旅途劳顿，愉快地接受着粉丝们的鲜花和祝福。粉丝们喊着“神韵、神韵、我爱你，”现场气氛非常热烈。</p>
 <figure id="attachment_8956466" aria-describedby="caption-attachment-8956466" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/03/1703222203501973-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-8956466" src="https://i.epochtimes.com/assets/uploads/2017/03/1703222203501973-450x300.jpg" alt="美国神韵纽约艺术团于3月23日早上抵达墨尔本，将展开大洋洲32场巡回演出，在墨尔本机场受到了期盼已久的粉丝们的热情欢迎。（周瑞秋／大纪元）" width="450" b="300" /></a><figcaption id="caption-attachment-8956466" class="wp-caption-text">美国神韵纽约艺术团于3月23日早上抵达墨尔本，将展开大洋洲32场巡回演出，在墨尔本机场受到了期盼已久的粉丝们的热情欢迎。（周瑞秋／大纪元）</figcaption></figure>
-<p>神韵纽约艺术团的领舞演员Danny Li来自悉尼，他认为参与神韵演出，能将传统的<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E6%96%87%E5%8C%96.md#1">中华文化</a>重现舞台，意义重大。他说：“神韵致力于恢复中国五千年传统文化，因为中共政权，这种文化在中国几乎消失殆尽，神韵在复兴传统文化。对我们来说，这是意义非凡的，因为我们是中国人，我们认为这是我们的使命，将希望、快乐和美好带给全世界的人。”</p>
-<p>澳洲观众往年对神韵演出的反响都很热烈，五度来澳演出的神韵节目主持人唐瑞，希望今年的全新节目再次得到澳洲观众的热爱。唐瑞说：“<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E6%96%87%E5%8C%96.md#1">中华文化</a>似乎有一种很强的连接性，她和全世界的任何文化相连通，因为她蕴含着普世价值，和世界各地人们所尊崇的主体价值是相通的。” 唐瑞希望今年有更多澳洲观众可以欣赏到神韵演出。</p>
+<p>神韵纽约艺术团的领舞演员Danny Li来自悉尼，他认为参与神韵演出，能将传统的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E6%96%87%E5%8C%96.md#1">中华文化</a>重现舞台，意义重大。他说：“神韵致力于恢复中国五千年传统文化，因为中共政权，这种文化在中国几乎消失殆尽，神韵在复兴传统文化。对我们来说，这是意义非凡的，因为我们是中国人，我们认为这是我们的使命，将希望、快乐和美好带给全世界的人。”</p>
+<p>澳洲观众往年对神韵演出的反响都很热烈，五度来澳演出的神韵节目主持人唐瑞，希望今年的全新节目再次得到澳洲观众的热爱。唐瑞说：“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E6%96%87%E5%8C%96.md#1">中华文化</a>似乎有一种很强的连接性，她和全世界的任何文化相连通，因为她蕴含着普世价值，和世界各地人们所尊崇的主体价值是相通的。” 唐瑞希望今年有更多澳洲观众可以欣赏到神韵演出。</p>
 <p>神韵风靡全球，很多观众甚至专程坐飞机追看神韵。唐瑞对此表示：“神韵能在两个多小时的演出中，充分展现中国五千年的传统文化。我认为观众真的很享受观神韵，因为他们可以游历中国不同的地域风情、体验不同层面的中华文化。”</p>
 <h2>粉丝守候机场，生怕错过近距离仰慕神韵艺术家的机会</h2>
 <figure id="attachment_8956476" aria-describedby="caption-attachment-8956476" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/03/1703222204511973.jpg"><img class="wp-image-8956476 size-medium" src="https://i.epochtimes.com/assets/uploads/2017/03/1703222204511973-450x300.jpg" width="450" b="300" /></a><figcaption id="caption-attachment-8956476" class="wp-caption-text">神韵粉丝、澳洲人Daniel Cameron和朋友们一起欢迎神韵纽约艺术团的到来（周瑞秋／大纪元）</figcaption></figure>
@@ -20,7 +20,7 @@
 <p>Cameron从神韵第一次来澳洲就观看神韵，每年必看。他说：“我每年都带全家人看神韵，每年还不止看一场。神韵演出太棒了！”</p>
 <p>神韵粉丝、墨尔本女孩琳琳去年第一次看到神韵，觉得特别好，特别激动。今天一早5点钟就起床准备来接机。她说：“我太兴奋了，一想到今天能来迎接神韵，就激动得睡不着觉！”</p>
 <p>家住墨尔本的兰馨女士觉得每年看神韵是给自己和家人的最好礼物。她早早就订了周六和周日场的演出票，生怕晚了就买不到票了。</p>
-<p>作为澳洲第二大城市的墨尔本，是<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A.md#1">澳大利亚</a>的艺术和时尚之都，也是南半球最具文化气息和艺术家云集的城市。戏剧、展览、音乐会、节庆盛典及体育赛事整年不断，吸引着全世界的目光。而被誉为“世界第一秀”的神韵演出，更是令大洋洲这颗璀璨明珠散发熠熠光芒。</p>
+<p>作为澳洲第二大城市的墨尔本，是<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A.md#1">澳大利亚</a>的艺术和时尚之都，也是南半球最具文化气息和艺术家云集的城市。戏剧、展览、音乐会、节庆盛典及体育赛事整年不断，吸引着全世界的目光。而被誉为“世界第一秀”的神韵演出，更是令大洋洲这颗璀璨明珠散发熠熠光芒。</p>
 <p>第十次莅临墨尔本的神韵艺术团每年都吸引了大量观众慕名而来，其中包括前梅尔顿市（Melton）市长布鲁斯．诺万（Bruce Rowan）、前莫纳什市（City of Monash）市长Paul Klisaris以及总部在墨尔本的澳洲国家公民委员会（NCC）主席彼得．韦斯特摩（Peter Westmore）等政界要人，他们对于神韵精湛的演出都赞不绝口。</p>
 <h2>一波三折嫣容现，典雅尊贵傲丽晶</h2>
 <p>2017年神韵纽约艺术团将在墨尔本市中心顶级剧院——丽晶剧院（Regent Theatre）再展风采。丽晶剧院又名摄政剧院﹐是一个历史悠久又富于春秋的剧院。说她古老，是因为剧院始建于1929年﹐由建筑师Cedric Ballantyne设计，其金碧辉煌而又独具一格的设计使其名声大噪，成为当时最大最奢华的剧院。说她年轻﹐是因为1945年一场大火烧毁了丽晶剧院，重建后，又经历萧条被迫关闭，但现如今，浴火重生后的剧院重放光彩。许多世界名作都曾在此上演，如《爱是永恒》、《猫》、《狮子王》、《音乐之声》等经典剧目。</p>
@@ -39,37 +39,43 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/17/3/20/n8944573.md#1">品味神韵超凡美学 美康州艺术家赞举世无双</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/17/3/20/n8946845.md#1">台东文化处长：人间的天使 传播真善的力量</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/17/3/21/n8948102.md#1">前舞蹈演员：“我们来在世上都有使命”</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/17/3/22/n8951936.md#1">“ 一生从未经历过的美好体验”</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/17/3/22/n8952993.md#1">地产商夫妇观神韵：领略了美好的中华文化</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/17/3/22/n8953083.md#1">恢复传统文化、用生命跳舞 神韵道别台湾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/3/20/n8944573.md#1">品味神韵超凡美学 美康州艺术家赞举世无双</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/3/20/n8946845.md#1">台东文化处长：人间的天使 传播真善的力量</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/3/21/n8948102.md#1">前舞蹈演员：“我们来在世上都有使命”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/3/22/n8951936.md#1">“ 一生从未经历过的美好体验”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/3/22/n8952993.md#1">地产商夫妇观神韵：领略了美好的中华文化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/3/22/n8953083.md#1">恢复传统文化、用生命跳舞 神韵道别台湾</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/30/n10263600.md#1" target="_blank">共产暴政录：宣导暴力杀戮的彭湃</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/22/n10869347.md#1" target="_blank">感恩节 法轮大法弟子感念师恩</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/15/n9959300.md#1" target="_blank">文革中自杀的几个名人（4）史学家翦伯赞</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/31/n11625277.md#1" target="_blank">法轮功真相传入太平洋热带岛国瓦努阿图</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/3/6/n11920418.md#1">线条魔术家  白描大师李公麟和五马图</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691255.md#1">【拍案惊奇】传中共深改办易主 王沪宁丢两权</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fhwnic3872/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fhwnic3872/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/3/23/n8956302.htm">神韵飞抵墨尔本 大洋洲32场巡演拉开帷幕</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/3/23/n8956302.htm">神韵飞抵墨尔本 大洋洲32场巡演拉开帷幕</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fhwnic3872/djy/blob/master/gb/17/3/23/n8956302.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fhwnic3872/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fhwnic3872/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fhwnic3872/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/17/3/23/n8956302.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
